Fix waybar not showing all workspaces

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -52,7 +52,7 @@ button:hover {
   background-color: #eb4d4b;
 }
 
-#mode {
+#submap {
   background-color: #64727d;
   box-shadow: inset 0 -3px #ffffff;
 }
